Adding mysqld driver

--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -1,6 +1,9 @@
 ---
 - hosts: localhost
   tasks:
+    - name: Install MySQL Driver
+      package: python-mysqldb
+      state: latest
     - name: MySQL Install
       package:
         name: mysql-server
