--- a/tasks/mysql.yml
+++ b/tasks/mysql.yml
@@ -2,8 +2,7 @@
 - hosts: localhost
   tasks:
     - name: Install MySQL Driver
-      package: python-mysqldb
-      state: latest
+      package: name=python-mysqldb state=latest
     - name: MySQL Install
       package:
         name: mysql-server
