--- a/roles/lamp.yml
+++ b/roles/lamp.yml
@@ -1,4 +1,4 @@
 ---
-- include: ../tasks/apache.yml
-- include: ../tasks/php.yml
-- include: ../tasks/mysql.yml
+- include: ../tasks/web/apache.yml
+- include: ../tasks/web/php.yml
+- include: ../tasks/db/mysql.yml
